--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3b89c">  <td>21/06/05 22:13:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Links.MultipleDD()[pri:0, instance:practice.Links@32b260fa]">MultipleDD</td> 
-  <td>main@778731861</td>   <td></td> </tr>
-<tr bgcolor="f3b89c">  <td>21/06/05 22:13:27</td>   <td>-2888</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Links.start()[pri:0, instance:practice.Links@32b260fa]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@778731861</td>   <td></td> </tr>
-<tr bgcolor="f3b89c">  <td>21/06/05 22:15:41</td>   <td>130635</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Links.teardown()[pri:0, instance:practice.Links@32b260fa]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@778731861</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/12 22:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="imagevalidate.img()[pri:0, instance:practice.imagevalidate@156b88f5]">img</td> 
+  <td>main@252277567</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/12 22:02:52</td>   <td>-2656</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;imagevalidate.start()[pri:0, instance:practice.imagevalidate@156b88f5]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252277567</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/12 22:03:08</td>   <td>13082</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;imagevalidate.teardown()[pri:0, instance:practice.imagevalidate@156b88f5]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252277567</td>   <td></td> </tr>
 </table>
