--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a59e97">  <td>21/06/12 22:02:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="imagevalidate.img()[pri:0, instance:practice.imagevalidate@156b88f5]">img</td> 
-  <td>main@252277567</td>   <td></td> </tr>
-<tr bgcolor="a59e97">  <td>21/06/12 22:02:52</td>   <td>-2656</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;imagevalidate.start()[pri:0, instance:practice.imagevalidate@156b88f5]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252277567</td>   <td></td> </tr>
-<tr bgcolor="a59e97">  <td>21/06/12 22:03:08</td>   <td>13082</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;imagevalidate.teardown()[pri:0, instance:practice.imagevalidate@156b88f5]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252277567</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/14 21:13:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InputFields.inputdata()[pri:1, instance:practice.InputFields@25084a1e]">inputdata</td> 
+  <td>main@1101048445</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/14 21:13:08</td>   <td>-2494</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InputFields.start()[pri:0, instance:practice.InputFields@25084a1e]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1101048445</td>   <td></td> </tr>
+<tr bgcolor="a59e97">  <td>21/06/14 21:13:24</td>   <td>13438</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InputFields.teardown()[pri:0, instance:practice.InputFields@25084a1e]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1101048445</td>   <td></td> </tr>
 </table>
